1. rename as whitepaper 2. parallel storage 3. content improvement

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -1,5 +1,5 @@
 @online{artela2023,
-  title={Artela: Rich blockchain for rich dApps},
+  title={Artela: Extend the functionality of blockchain},
   author={Artela Network},
   year={2023},
   howpublished={https://www.artela.network/}
@@ -13,7 +13,7 @@
 }
 
 @misc{artela_aspect_whitepaper,
-  title = {Aspect Whitepaper},
+  title = {Aspect Programming: Aspect Enabled Extension on the Blockchain},
   author = {Artela Network},
   howpublished = {\url{https://github.com/artela-network/aspect-whitepaper}},
   note = {Accessed: 2024-05-29}
