--- a/latex/sections/06-summary.tex
+++ b/latex/sections/06-summary.tex
@@ -1,3 +1,3 @@
 \section{Conclusion}
 
-In this paper, we have discussed the realization of full parallel stacks and elastic block space, which is aiming to enhance the scalability of the Artela blockchain and provides dApps with predictable performance.Based on existing parallel EVM solutions, Artela achieves further optimization of parallel transaction processing and I/O performance through predictive optimistic execution and asynchronous preloading. The fast persistent storage layer improves storage efficiency, while the elastic block space model allows dApps to request dedicated block space, further boosting network efficiency. These innovations are the key technologies of Artela EVM++ and will also become a critical breakthrough in Artela's exploration of a new generation modular execution layer. It make Artela EVM++ well-suited for integrating advanced technologies and supporting a wide range of dApps.
+In this paper, we have discussed the realization of full parallel stacks and elastic block space, which is aiming to enhance the scalability of the Artela blockchain and provides dApps with predictable performance.Based on existing parallel EVM solutions, Artela achieves further optimization of parallel transaction processing and I/O performance through predictive optimistic execution and asynchronous preloading. The parallel storage improves storage efficiency, while the elastic block space model allows dApps to request dedicated block space, further boosting network efficiency. These innovations are the key technologies of Artela EVM++ and will also become a critical breakthrough in Artela's exploration of a new generation modular execution layer. It make Artela EVM++ well-suited for integrating advanced technologies and supporting a wide range of dApps.
