--- a/latex/references.bib
+++ b/latex/references.bib
@@ -1,8 +1,22 @@
 @online{artela2023,
-  title={Artela: Rich blockchain for rich dApps},
+  title={Artela: Extend the functionality of blockchain},
   author={Artela Network},
   year={2023},
   howpublished={https://www.artela.network/}
+}
+
+@misc{artela_evm_plus_plus,
+  title = {{EVM++}},
+  author = {Artela Network},
+  howpublished = {\url{https://docs.artela.network/main/Artela-Blockchain/EVM++}},
+  note = {Accessed: 2024-05-29}
+}
+
+@misc{artela_aspect_whitepaper,
+  title = {Aspect Programming: Aspect Enabled Extension on the Blockchain},
+  author = {Artela Network},
+  howpublished = {\url{https://github.com/artela-network/aspect-whitepaper}},
+  note = {Accessed: 2024-05-29}
 }
 
 @article{wood2014ethereum,
