--- a/latex/sections/01-introduction.tex
+++ b/latex/sections/01-introduction.tex
@@ -6,13 +6,13 @@ In this paper, we present the design of the parallel execution stack, which aims
 
 While the Ethereum Virtual Machine (EVM)\cite{ethereum2020evm} has gained widespread adoption and offers robust functionalities, EVM developers still face significant limitations. Its single-threaded execution model hampers scalability by processing transactions sequentially, leading to network congestion and high gas fees during peak periods. Furthermore, the deterministic nature of the EVM, while ensuring consistency, constrains its adaptability for handling complex real-world scenarios. Additionally, the absence of native support for parallel processing in the EVM inhibits its integration with cutting-edge applications.
 
-To tackle these challenges, Artela introduces EVM++, an advanced iteration of the EVM. EVM++ is engineered to improve both the scalability and extensibility of the EVM blockchain while preserving compatibility with its execution model. At the heart of EVM++ lies the parallel execution stack, the key solution for achieving scalability.
+To tackle these challenges, Artela introduces EVM++\cite{artela_evm_plus_plus}, an advanced iteration of the EVM. EVM++ is engineered to improve both the scalability and extensibility of the EVM blockchain while preserving compatibility with its execution model. At the heart of EVM++ lies the parallel execution stack, the key solution for achieving scalability.
 
 This paper delves into the implementation of the parallel execution stack, which comprises four sub-modules:
 
 \begin{enumerate}
   \item \textbf{Predictive optimistic execution:} enhances optimistic parallel execution by accurately predicting transaction dependencies to reduce conflicts. It uses a hint table that logs state access information from historical transactions to form optimized execution groups without user input.
   \item \textbf{Async preloading:} an async I/O solution. It leverages a predictive algorithm to preload transaction states into memory before execution, and streamlines data access to eliminate I/O bottlenecks during execution.
-  \item \textbf{Fast persistent storage layer:} an async I/O solution. It leverages a predictive algorithm to preload transaction states into memory before execution, and streamlines data access to eliminate I/O bottlenecks during execution.
+  \item \textbf{Parallel storage:} a solution that enabling parallelizable storage and enhancing the efficiency of persisting Merkelized world states into a database.
   \item \textbf{Elastic block space:} the design refers to a dynamically scalable block space that provides independent and protocol-guaranteed block space for dApps with high transaction throughput needs, ensuring predictable performance. When a new EBS is created, dedicated resources are elastically allocated to dApps, ensuring efficient resource utilization and accommodating varying transaction volumes.
 \end{enumerate}
